<resources>
    <string name="app_name">MEMOMATE</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">MEMOMATE</string>
    <string name="nav_header_subtitle">kontakt@memomate.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Regulamin</string>

    <string name="menu_home">Aktualności</string>
    <string name="menu_gallery">Memy</string>
    <string name="menu_slideshow">Notatki i przemyślenia</string>
    <string name="Aktualności_1">Witaj użytkowniku!</string>
    <string name="Aktualności_2">Wiesz gdzie trafiłeś?!</string>
    <string name="Aktualności_3">DO MEMOMATE!</string>
    <string name="Aktualności_4">Najlepszej i najbezpieczniejszej aplikacji, w której możesz dodać stworzony przez Ciebie MEM, a także możesz podzielić się z innymi swoimi przemyśleniami.</string>
    <string name="Aktualności_5">Zatem</string>
    <string name="Aktualnosci_6">DO DZIEŁA!</string>
    <string name="Aktualności_7">BAW SIĘ DOBRZE!</string>
    <string name="Aktualności_8">POWODZENIA!</string>
    <string name="Aktualności_9">Najsympatyczniejsza załoga MEMOMATE :*</string>
    <string name="mem_1">Drogi użytkowniku!</string>
    <string name="mem_2">Znajdziesz tutaj stworzone przez Was MEMY!</string>
    <string name="mem_3">Każda praca będzie posiadać przypisanego autora, ale jeśli chcesz pozostać anonimowy - daj nam o tym znać!</string>
    <string name="mem_4">W celu Waszego bezpieczeństwa, aby dodać pracę trzeba wysłać ją do Nas przez formularz znajdujący się w prawym dolnym rogu ekranu, bądź bezpośrednio na meila: prace@memomate.com</string>
    <string name="mem_dodatkowy">Cieszymy się że jesteś z Nami!</string>
    <string name="mem_data">Dodano: 13.04.2024 23:09</string>
    <string name="mem_prace">WASZE PRACE!</string>
    <string name="aawpis_1">Ooo... a to co to?!</string>
    <string name="aawpis_2">Też stawialiśmy sobie takie trudne pytania...</string>
    <string name="aawpis_3">Postaramy się odpowiedzieć Wam w najprostrzy sposób na to pytanie.</string>
    <string name="aawpis_4">Zakładka ta powstała po to, abyście mogli dzielić się wszelkiego rodzaju informacjami z innymi użytkownikami, a dodatkowo jeśli ktoś bał się komuś coś przekazać może to przekazać to tutaj, dodatkowo pozostanie w pełni anonimowym.</string>
    <string name="aawpis_5">W celu zapewnienia Wam bezpieczeństwa, swoje wpisy przesyłajcie Nam przez formularz, bądź meilowo: prace@memomate.com</string>
    <string name="aawpis_6">Nasz personel dokłada wszelkich starań abyście pozostali tutaj bezpieczni i szybko ujrzeni Swoje wpisy!</string>
    <string name="aawpis_data">Dodano: 12.04.2024 3:27</string>
    <string name="WPIS_1">Z nieoficjalnych źródeł wiem, że będziemy mieli w najbliższych dniach próbną ewakuacje, także nie panikujcie!</string>
    <string name="wpis_autor_1">Autor: Wasz Niezastąpiony Zbawiciel</string>
    <string name="wpis_data_2">Dodano: 11.04.2024 21:57</string>
    <string name="wpis_2">Słuchajcie! Wiecie, że Nasz dziekan ma podobno wziąć kolejny ślub? Wierzycie w to?!</string>
    <string name="wpis_autor_2">Autor: Maciej Kobyłko</string>
    <string name="wpis_data_3">Dodano: 11.04.2024 18:54</string>
    <string name="wpis_3">Hej. Jestem tutaj nowym uczniem nie potrafię się odnaleźć w tym środowisku, a spodobała mi się jedna studentka... Miłości się nie wybiera, ona przychodzi sama... Pomógł by ktoś?</string>
    <string name="wpis_autor_3">Autor: Anonimowy Marek</string>
    <string name="wpis_data_4">Dodano: 10.04.2024 22:48</string>
    <string name="wpis_4">Pomóżcie! Kto wie jakie lubi Kwiaty założycielka tej apki? I przedewszystkim jak myślicie co zrobić aby wpaść jej w oko?</string>
    <string name="wpis_auto_4">Autor: Tajemniczy Mateo</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Hasło</string>
    <string name="action_sign_in">Zaloguj lub zarejestruj</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logowanie_1">Witajcie w MEMOMATE!!!</string>
</resources>